--- a/alignment_exercise.ipynb
+++ b/alignment_exercise.ipynb
@@ -158,7 +158,7 @@
     "id": "RGoBlcACv-Go"
    },
    "source": [
-    "We can visualize some samples, along with their labels, from ImageNet as follows"
+    "We can visualize some ImageNet samples, along with their labels, as follows"
    ]
   },
   {
@@ -505,7 +505,7 @@
     "id": "a65c92_nBNj1"
    },
    "source": [
-    "If you instead prefer you could also load a pretrained model by remvoving comments from the code below."
+    "If you instead prefer you could also load a pretrained model by setting `load_pretrained=True` in the code below."
    ]
   },
   {
