--- a/alignment_exercise.ipynb
+++ b/alignment_exercise.ipynb
@@ -258,10 +258,10 @@
    "source": [
     "*Finding adversarial examples:* The idea is pretty simple: given a target class (t), we want to find a perturbation ($\\delta'$) that when added to the input (x) maximizes the likelihood of the target class. At the same time, we want the perturbation to be small or lie within some pre-defined perturbation set: for example in a tiny L2 ball around the image. Basically, we want to find a $\\delta'$ such that\n",
     "\n",
-    "$\\delta' = argmax_{||\\delta||_2 \\leq \\epsilon} L(x + \\delta, t; \\theta)$\n",
+    "$\\delta' = argmin_{||\\delta||_2 \\leq \\epsilon} L(x + \\delta, t; \\theta)$\n",
     "\n",
     "\n",
-    "To find a perturbation that maximizes the objective (likelihood) while remaining in a bounded set, we use projected gradient descent PGD (see <https://arxiv.org/abs/1706.06083> for more). "
+    "To find a perturbation that minimizes the objective (maximizes likelihood) while remaining in a bounded set, we use projected gradient descent PGD (see <https://arxiv.org/abs/1706.06083> for more). "
    ]
   },
   {
