--- a/alignment_exercise.ipynb
+++ b/alignment_exercise.ipynb
@@ -909,7 +909,7 @@
     "    total_grad = 0\n",
     "    for _, n in it:\n",
     "        ...\n",
-    "        grad, _ = helpers.get_gradient(mod, noised_im, targ, normalization)\n",
+    "        grad, _ = utils.get_gradient(mod, noised_im, targ, normalization)\n",
     "        total_grad += grad\n",
     "    return total_grad / Nsamples\n",
     "```\n",
@@ -1254,7 +1254,7 @@
     "\n",
     "```\n",
     "def feature_maximization_loss(mod, im, feature_number, normalization_function):\n",
-    "    feature_vector = helpers.get_features(mod, im, normalization) # Get features for input\n",
+    "    feature_vector = utils.get_features(mod, im, normalization) # Get features for input\n",
     "    relevant_coordinate = ch.gather(feature_vector, 1, feature_number[:, None]) \n",
     "    loss = ?\n",
     "    ...\n",
